@@ -1944,17 +1944,21 @@ function render_report_html_item ($content, $table, $report, $mini = false) {
 			}
 			
 			if ($content['treport_custom_sql_id'] != 0) {
-				$sql = get_db_value_filter('`sql`', 'treport_custom_sql', array('id' => $content['treport_custom_sql_id']));
+				$sql = safe_output (get_db_value_filter('`sql`', 'treport_custom_sql', array('id' => $content['treport_custom_sql_id'])));
 			}
 			else {
-				$sql = $content['external_source'];
+				$sql = safe_output ($content['external_source']);
 			}
-			
+
+			// Minimal security check on SQL incoming from the database	
+			$sql = check_sql ($sql);
+echo "$sql output";	
 			$result = get_db_all_rows_sql($sql);
+
 			if ($result === false) {
 				$result = array();
 			}
-			
+		
 			if (isset($result[0])) {
 				if (count($result[0]) > count($table2->head)) {
 					$table2->head = array_pad($table2->head, count($result[0]), '&nbsp;');
